feat: AI 서비스 예외 처리 및 코드 리뷰 반영